--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,27 @@
-<!-- This is a static file -->
-<!-- served from your routes in server.js -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Glitch!</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A cool thing made with Glitch">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js" defer></script>
-  </head>
 
-  <body>
-    <h1>A Dream of the Future</h1>
-  </body>
-  
+<!doctype html>
+
+<html lang="en">
+<head>
+</head>
+
+<body>
+    <div class="row">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4">
+          <h1>You Searched For : <%= data.userQuery %></h1>
+          <% if(data.loggedIn){ %>
+                <h2> You are logg in as : <%= data.username %> </h2>
+            <% } %>
+          <ul>
+            <% data.searchResults.forEach(result=>{ %>
+                <li> <%= result %> </li> 
+            <% }); %>
+          </ul>
+        </div>
+        <div class="col-lg-4"></div>
+      </div> 
+   
+  <script src="/public/script.js"></script>
+</body>
 </html>
