--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <html lang="en">
@@ -22,6 +21,6 @@
         <div class="col-lg-4"></div>
       </div> 
    
-  <script src="/public/script.js"></script>
+  <script src="/public/js/example.js"></script>
 </body>
 </html>
