🍲👰 Checkpoint ./views/index.ejs:10221761/1817 ./views/search.ejs:10221761/662 ./server.js:10221761/170 ./README.md:10221761/3825

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,22 +5,9 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4">
-          <h1>You Searched For : <%= data.userQuery %></h1>
-          <% if(data.loggedIn){ %>
-                <h2> You are logg in as : <%= data.username %> </h2>
-            <% } %>
-          <ul>
-            <% data.searchResults.forEach(result=>{ %>
-                <li> <%= result %> </li> 
-            <% }); %>
-          </ul>
-        </div>
-        <div class="col-lg-4"></div>
-      </div> 
+          <h1>hey</h1>
+
    
-  <script src="/public/js/example.js"></script>
+
 </body>
 </html>
