🚕🔋 Checkpoint ./views/index.ejs:10221761/238 ./server.js:10221761/1348 ./views/database.ejs:10221761/456 ./package.json:10221761/1320

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <!doctype html>
 
 <html lang="en">
+  
 <head>
 </head>
 
 <body>
-          <h1>hey</h1>
-
-   
-
+<h1>hey</h1>
+<button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me</a></button>
 </body>
+
 </html>
