☕️🍯 Checkpoint ./server.js:10221761/1469 ./views/database.ejs:10221761/43

--- a/views/database.ejs
+++ b/views/database.ejs
@@ -7,9 +7,9 @@
 <body>
 <h1>Database enteries:</h1>
     <ul>
-    <% data.searchResults.forEach(result=>{ %>
+    <% data.forEach(result=>{ %>
     <li> <%= result %> </li> 
     <% }); %>
-    </ul>
+     </ul>
 </body>
 </html>
