--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,13 @@
   
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-</head>
+    <script src="/static/script.js"></script>
+  </head>
 
 <body>
 <h1>hey</h1>
 <button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me</a></button>
+<button onclick="fetchNames()">Click me next</button>
 </body>
 
 </html>
