⭐️🚎 Checkpoint ./server.js:10221761/252 ./views/index.ejs:10221761/42

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <h1>hey</h1>
 <button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me</a></button>
 <form>
-  <button type="submit" action="/getNames"> Click me next </button>
+  <button method="GET" type="submit" action="/data/getNames"> Click me next </button>
 </form>
 
   <% if (locals.names) { %> 
