🏑🤑 Checkpoint ./views/index.ejs:10221761/554 ./README.md:10221761/136 ./views/search.ejs:10221761/51

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,19 +9,22 @@
 
 <body>
 <h1>hey</h1>
-<button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me</a></button>
 <form>
-  <button formaction="/pages/getNames" formmethod"GET" type="submit"> Click me next </button>
+  <button formaction="/pages/getNames" formmethod"GET" type="submit"> Click me</button>
 </form>
+<button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me next</a></button>
+
 
   <% if (locals.names) { %> 
     <% JSON.stringify(names) %> 
+    <h4>Names inside our database:</h4>
+    <% names.forEach(result=>{ %>
     <ol>
-     <% names.forEach(result=>{ %>
        <li><%= result.name %></li> 
     </ol>
     <% }); %>
   <% }%>
+  
   
 </body>
 
