--- a/views/database.ejs
+++ b/views/database.ejs
@@ -19,5 +19,26 @@
         <% }); %>
       </tbody>
     </table>
+  <form>
+    <h4>
+      Add a new entry:
+    </h4>
+    <label>id</label><input name="id" value="id">
+    <label>name</label><input name="name" value="name">
+    <label>description</label><input name="desc" value="id">
+
+
+  <button formaction="/pages/sendNames" formmethod"POST" type="submit"> Click me</button>
+</form>
+  
+  <% if (locals.updatedData) { %> 
+    <% JSON.stringify(updatedData) %> 
+    <h4>Names inside our database:</h4>
+    <% updatedData.forEach(result=>{ %>
+    <ol>
+       <li><%= result.name %></li> 
+    </ol>
+    <% }); %>
+  <% }%>
 </body>
 </html>
