🍋🚝 Checkpoint ./server.js:10221761/84 ./views/database.ejs:10221761/16 ./package.json:10221761/1424

--- a/views/database.ejs
+++ b/views/database.ejs
@@ -30,7 +30,7 @@
     </div>
     <div>
       <label>description</label><input name="desc" type="text" maxlength="100" required placeholder="description">
-      <button formaction="/pages/sendNames" formmethod"POST" type="submit">Submit</button>
+      <button formaction="/pages/sendNames" method"POST" type="submit">Submit</button>
     </div>
   </form>
   
