⛩📒 Checkpoint ./server.js:10221761/516 ./views/database.ejs:10221761/17 ./static/script.js:10221761/84

--- a/views/database.ejs
+++ b/views/database.ejs
@@ -20,7 +20,7 @@
       </tbody>
     </table>
   
-  <form>
+  <form id ="myForm">
     <h4>Add a new entry:</h4>
     <div>
       <label>id</label><input name="id" type="text" maxlength="100" required placeholder="id">
