💪🎖 Checkpoint ./server.js:10221761/20 ./views/database.ejs:10221761/26

--- a/views/database.ejs
+++ b/views/database.ejs
@@ -26,7 +26,7 @@
       <label>id</label><input name="id" type="text" maxlength="100" required placeholder="id">
     </div>
     <div>
-      <label>name</label><input name="name" type="text" maxlength="100" required placeholder="name">
+      <label>name</label><input  value= name="name" type="text" maxlength="100" required placeholder="name">
     </div>
     <div>
       <label>description</label><input name="desc" type="text" maxlength="100" required placeholder="description">
