🎖☺️ Checkpoint ./server.js:10221761/2125 ./views/index.ejs:10221761/392

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,15 @@
     <% }); %>
   <% }%>
   
+    <% if (locals.emp) { %> 
+    <h4>Names inside our database:</h4>
+    <% emp.forEach(result=>{ %>
+    <ul>
+       <li><%= result.firstname %> <%= result.lastname %></li> 
+    </ul>
+    <% }); %>
+  <% }%>
+  
   
   
 </body>
