🍄👵 Checkpoint ./server.js:10221761/773 ./views/index.ejs:10221761/229 ./README.md:10221761/211

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,20 +10,9 @@
 <body>
 <h1>hey</h1>
 <form>
-  <button formaction="/pages/getNames" formmethod"GET" type="submit"> Click me</button>
+  <button formaction="/pages/names" formmethod"GET" type="submit"> Click me</button>
 </form>
 <button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me next</a></button>
-
-
-  <% if (locals.names) { %> 
-    <% JSON.stringify(names) %> 
-    <h4>Names inside our database:</h4>
-    <% names.forEach(result=>{ %>
-    <ul>
-       <li><%= result.name %></li> 
-    </ul>
-    <% }); %>
-  <% }%>
   
     <% if (locals.emp) { %> 
     <h4>Names inside our database:</h4>
