🎢📅 Checkpoint ./server.js:10221761/901 ./views/index.ejs:10221761/258

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,17 @@
   <button formaction="/pages/names" formmethod"GET" type="submit"> Click me</button>
 </form>
 <button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me next</a></button>
+
+
+  <% if (locals.names) { %> 
+    <% JSON.stringify(names) %> 
+    <h4>Names inside our database:</h4>
+    <% names.forEach(result=>{ %>
+    <ul>
+       <li><%= result.name %></li> 
+    </ul>
+    <% }); %>
+  <% }%>
   
     <% if (locals.emp) { %> 
     <h4>Names inside our database:</h4>
