🕶😽 Checkpoint ./views/database.ejs:10221761/9 ./server.js:10221761/5207 ./views/index.ejs:10221761/137

--- a/views/database.ejs
+++ b/views/database.ejs
@@ -20,7 +20,7 @@
       </tbody>
     </table>
   
-  <form id ="myForm">
+<!--   <form id ="myForm">
     <h4>Add a new entry:</h4>
     <div>
       <label>id</label><input value="id" name="id" type="text" maxlength="100" required placeholder="id">
@@ -33,6 +33,6 @@
       <button formaction="/pages/sendNames" method"POST" type="submit">Submit</button>
     </div>
   </form>
-  
+   -->
 </body>
 </html>
