--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
 <body>
 <h1>hey</h1>
 <form>
-  <button formaction="/pages/names" formmethod"GET" type="submit"> Click me</button>
+  <button formaction="/test" formmethod"GET" type="submit"> Click me</button>
 </form>
-<button><a href="https://ejs-views-practice.glitch.me/pages/database">Click me next</a></button>
+<button><a href="https://ejs-views-practice.glitch.me/data/employeenames">Click me next</a></button>
 
 
   <% if (locals.names) { %> 
