🎈🖐 Checkpoint ./server.js:10221761/111613 ./views/test.ejs:10221761/161

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,7 +1,11 @@
 <% if (locals.claims) { %> 
 <% claims.forEach(result=>{ %>
 <p>
-  <%=result%>
+  Descriptions: <%=result.description%>
 </p>
 <%})%>
 <%}%>
+
+<p>
+  Nothing
+</p>
