👸🙉 Checkpoint ./routes/api.js:10221761/2548 ./routes/views.js:10221761/622 ./views/index.ejs:10221761/5

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
 <body>
   <h1>DBMS</h1>
-  <button><a href="https://ejs-views-practice.glitch.me/claims">Claims</a></button>
+  <button><a href="https://ejs-views-practice.glitch.me/claims">Open Claims</a></button>
 </body>
 
 <%- include("partials/footer") %>
