⛑🙈 Checkpoint ./views/claims.ejs:10221761/276 ./README.md:10221761/92 ./routes/views.js:10221761/384 ./views/index.ejs:10221761/122 ./views/closedclaims.ejs:10221761/775 ./views/partials/header.ejs:10221761/831 ./views/openclaims.ejs:10221761/38

--- a/views/closedclaims.ejs
+++ b/views/closedclaims.ejs
@@ -1,9 +1,12 @@
 <% if (locals.claims) { %> 
 <h1>
-  Open Claims
+  Closed Claims
 </h1>
 <% claims.forEach(result=>{ %>
-<table>
+<% var myDate = new Date(result.dateopened) %>
+<% var output = myDate.getDate() + "\\" +  (myDate.getMonth()+1) + "\\" + myDate.getFullYear() %>
+
+<table class="table .table-hover">
   <tr>
     <th>Customer</th>
     <th>Product</th>
@@ -19,7 +22,7 @@
     <td><%=result.issue%></td>
     <td><%=result.description%></td>
     <td><%=result.employee%></td>
-    <td><%=result.dateopened%> </td>
+    <td><%= output %></td>
     <td><%=result.resolution%></td>
   </tr>
 </table>
@@ -27,6 +30,6 @@
 <%})%>
 <%}else{%>
 <h1>
- No Open Claims
+ No Closed Claims Found
 </h1>
 <%}%>
