--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,9 @@
 
 <body>
   <h1>DBMS</h1>
-  <button><a href="https://ejs-views-practice.glitch.me/claims">Open Claims</a></button>
+  <button><a href="https://ejs-views-practice.glitch.me/openclaims">Open Claims</a></button>
+  <button><a href="https://ejs-views-practice.glitch.me/closedclaims">Closed Claims</a></button>
+
 </body>
 
 <%- include("partials/footer") %>
