⛄️🚿 Checkpoint ./views/openclaims.ejs:10221761/1864 ./views/closedclaims.ejs:10221761/80

--- a/views/closedclaims.ejs
+++ b/views/closedclaims.ejs
@@ -42,4 +42,7 @@
 </h1>
 <%}%>
 
+  <button><a href="https://ejs-views-practice.glitch.me/">Return</a></button>
+
+
 <%- include("partials/footer") %>
