--- a/views/openclaims.ejs
+++ b/views/openclaims.ejs
@@ -5,36 +5,46 @@
 <h1>
   Open Claims
 </h1>
-<% claims.forEach(result=>{ %>
-<% var myDate = new Date(result.dateopened) %>
-<% var output = myDate.getDate() + "\\" +  (myDate.getMonth()+1) + "\\" + myDate.getFullYear() %>
-
 <table class="table table-hover">
-  <tr>
-    <th>Customer</th>
-    <th>Product</th>
-    <th>Issue</th>
-    <th>Description</th>
-    <th>Technician</th>
-    <th>Open Date</th>
-    <th>Resolution</th>
-  </tr>
-  <tr>
-    <td><%=result.customer%></td>
-    <td><%=result.product%></td>
-    <td><%=result.issue%></td>
-    <td><%=result.description%></td>
-    <td><%=result.employee%></td>
-    <td><%= output %></td>
-    <td><%=result.resolution%></td>
-  </tr>
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Product</th>
+      <th>Issue</th>
+      <th>Description</th>
+      <th>Technician</th>
+      <th>Open Date</th>
+      <th>Resolution</th>
+    </tr>
+  </thead>
+  <% claims.forEach(result=>{ %>
+  <% var myDate = new Date(result.dateopened) %>
+  <% var output = myDate.getDate() + "\\" +  (myDate.getMonth()+1) + "\\" + myDate.getFullYear() %>
+
+  <tbody>
+    <tr>
+      <td><%=result.customer%></td>
+      <td><%=result.product%></td>
+      <td><%=result.issue%></td>
+      <td><%=result.description%></td>
+      <td><%=result.employee%></td>
+      <td><%= output %></td>
+      <td><%=result.resolution%></td>
+    </tr>    
+  </tbody>
+  <%})%>
+
 </table>
 </p>
-<%})%>
 <%}else{%>
 <h1>
- No Open Claims
+ No Open Claims Found
 </h1>
 <%}%>
 
+  <button><a href="https://ejs-views-practice.glitch.me/">Return</a></button>
+
+
+
+<%- include("partials/footer") %>
 
