--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 
 <body>
   <h1>DBMS</h1>
-  <button><a href="https://ejs-views-practice.glitch.me/openclaims">Open Claims</a></button>
-  <button><a href="https://ejs-views-practice.glitch.me/closedclaims">Closed Claims</a></button>
+  <button><a href="openclaims">Open Claims</a></button>
+  <button><a href="/closedclaims">Closed Claims</a></button>
 
 </body>
 
