--- a/views/openclaims.ejs
+++ b/views/openclaims.ejs
@@ -42,7 +42,7 @@
 </h1>
 <%}%>
 
-  <button><a href="https://ejs-views-practice.glitch.me/">Return</a></button>
+  <button><a href="/">Return</a></button>
 
 
 
