🍋📰 Checkpoint ./views/index.ejs:10221761/295 ./routes/views.js:10221761/1890 ./views/openclaims.ejs:10221761/5 ./views/claims.ejs:10221761/86

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -3,7 +3,7 @@
 
 <% if (locals.claims) { %> 
 <h1>
-  Open Claims
+  Claims
 </h1>
 <table class="table table-hover">
   <thead>
@@ -14,6 +14,7 @@
       <th>Description</th>
       <th>Technician</th>
       <th>Open Date</th>
+      <th>Status</th>
       <th>Resolution</th>
     </tr>
   </thead>
@@ -29,6 +30,7 @@
       <td><%=result.description%></td>
       <td><%=result.employee%></td>
       <td><%= output %></td>
+      <td><%=result.status%></td>
       <td><%=result.resolution%></td>
     </tr>    
   </tbody>
