--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <%- include("partials/header") %>
 
 <body>
-  <h1>DBMS</h1>
-  <button><a href="openclaims">Open Claims</a></button>
-  <button><a href="/closedclaims">Closed Claims</a></button>
+  <h1>Admin Home</h1>
+  <button><a href="/claims">Claims</a></button>
+  <button><a href="/employees">Employees</a></button>
+  <button><a href="/customers">Customers</a></button>
+  <button><a href="/products">Products</a></button>
 
 </body>
 
