⏲🏆 Checkpoint ./views/products.ejs:10221761/3022 ./static/style.css:10221761/788

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -12,55 +12,68 @@
       <th>Unit Cost</th>
     </tr>
   </thead>
-  <% products.forEach(result=>{ %>
   <tbody>
-    <tr>
+  <% products.forEach(result=>{ %>
+    <tr id"#row">
       <td><%=result.name%></td>
       <td><%=result.unitcost%></td>
     </tr>    
-  </tbody>
+  <% var description = result.description %>
   <%})%>
 <% } %> 
+  </tbody>
 
+   <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+  
   <button><a href="/">Return</a></button>
- 
+
   
 <%- include("partials/footer") %>
   
-<!-- <script type=text/javascript>
-   var baseURL = "https://ejs-views-practice.glitch.me"
-   
-   function myFunction() {
-    // productid = JSON.parse(productid);
-    // description = JSON.parse(description);
-    console.log("hey")
-    // fetch( baseURL+'/api/', {
-    //     headers:{
-    //       "content-type":"application/json",
-    //     },
-    //     body: JSON.stringify({
-    //       item: result.item,
-    //       price: result.price,
-    //       ingredients: result.ingredients,
-    //       incart: true
-    //     }),
-    //     method: 'POST'
-    // }).then(resp=>{
-    //    window.location.reload();//so changes render
-    // }, err=>{
-    //   console.log(err);
-    // })
-  }
-   
-  function del(result) {
-    result = JSON.parse(result);
-    fetch('https://aat38-assignment3b.glitch.me/api/cart/'+result.item , {
-        method: 'DELETE'
-    }).then(resp=>{
-     window.location.reload();
-    }, err=>{
-      console.log(err);
-    })
-  }
+<script type=text/javascript>
   
-</script>  -->
+  $('#row tr').click(function() {
+modal.style.display = "block";
+  });
+  
+   var baseURL = "https://ejs-views-practice.glitch.me"
+<button id="myBtn">Open Modal</button>
+
+
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+function modal() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script> 
