--- a/views/products.ejs
+++ b/views/products.ejs
@@ -14,7 +14,7 @@
   </thead>
   <tbody>
   <% products.forEach(result=>{ %>
-    <tr id"#row">
+    <tr class='clickable-row' data-toggle="modal" data-target="#modal" style="cursor:pointer">
       <td><%=result.name%></td>
       <td><%=result.unitcost%></td>
     </tr>    
@@ -23,57 +23,13 @@
 <% } %> 
   </tbody>
 
-   <!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
-  </div>
-
-</div>
   
   <button><a href="/">Return</a></button>
 
   
-<%- include("partials/footer") %>
   
 <script type=text/javascript>
+
+</script>
   
-  $('#row tr').click(function() {
-modal.style.display = "block";
-  });
-  
-   var baseURL = "https://ejs-views-practice.glitch.me"
-<button id="myBtn">Open Modal</button>
-
-
-
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-function modal() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script> 
+  <%- include("partials/footer") %>
