--- a/views/products.ejs
+++ b/views/products.ejs
@@ -33,3 +33,48 @@
 </script>
   
   <%- include("partials/footer") %>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Unit Cost</th>
+    </tr>
+  </thead>
+  <% products.forEach(result=>{ %>
+  <tbody>
+  <% products.forEach(result=>{ %>
+    <tr class='clickable-row' data-toggle="modal" data-target="#modal" style="cursor:pointer">
+    <tr data-toggle="modal" data-target="#descriptionModal">
+      <td><%=result.name%></td>
+      <td><%=result.unitcost%></td>
+    </tr>    
+  <% var description = result.description %>
+  </tbody>
+  <%})%>
+<% } %> 
+  </tbody>
+<% } %>
+
+  
+  <button><a href="/">Return</a></button>
+
+<!-- Modal -->
+<div class="modal fade" id="descriptionModal" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Title Example</h4>
+      </div>
+      <div class="modal-body">
+        <p>Testing 1 </p>
+        <p>Testing 2 </p>
+        <p>Testing 3 </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
