--- a/static/style.css
+++ b/static/style.css
@@ -4,3 +4,14 @@
   font-size: 28px;
   font-weight: bold;
 }
+
+
+.clickable-row {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
