💕😂 Checkpoint ./views/products.ejs:10221761/1716 ./views/partials/header.ejs:10221761/476 ./static/style.css:10221761/27

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -18,7 +18,7 @@
   <% products.forEach(result=>{ %>
     <tr id='<%=i%>' data-toggle="modal" data-target="#descriptionModal" style="cursor:pointer">
       <td><input type="button" class="clickable-row" onclick="getId(this)" value='<%=result.name%>'></td>
-      <td><%=result.unitcost%></td>
+      <td><input type="button" class="clickable-row" onclick="getId(this)" value='<%=result.unitcost%>'></td>
        
     </tr>    
   
