--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="../../static/style.css">
   <script src="/static/script.js"></script>
   <!--   BOOTSTRAP -->
 <!-- Latest compiled and minified CSS -->
