--- a/static/style.css
+++ b/static/style.css
@@ -8,8 +8,11 @@
 
 .clickable-row {
   background: none;
-	color: yellow;
+/* 	color: yellow; */
 	border: none;
+  width: 100%;
+  height: 100%;
+  text-align: left;
 	padding: 0;
 	font: inherit;
 	cursor: pointer;
