--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="../../static/style.css">
-  <script src="/static/script.js"></script>
+<link rel="stylesheet" type="text/css" href="/style.css">
+  <script src="/script.js"></script>
   <!--   BOOTSTRAP -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
