--- a/views/products.ejs
+++ b/views/products.ejs
@@ -18,38 +18,32 @@
       <td><input type="button" class="clickable-row" onclick="getId(this)" name='<%=result.description%>,<%=result.productid%>' value='<%=result.unitcost%>'></td>
     </tr>
   <%})%>
-  <% } %> 
-  
-  
-  <!-- Modal -->
-<div class="modal fade" id="descriptionModal" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <p>hey</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
+  <% } %>
   </tbody>
  
+    
+<div id="descriptionModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
   
   <button><a href="/">Return</a></button>
 
   
 <script type=text/javascript>
+
+  
   function  getId(element) {
-    var info=element.name
-    alert("row" + element.parentNode.parentNode.rowIndex + 
-    " - column" + element.parentNode.cellIndex + info );
+    var info=element.name.split(",")[0];
+    // alert("row" + element.parentNode.parentNode.rowIndex + 
+    // " - column" + element.parentNode.cellIndex + info );
+    var modal = document.getElementById("descriptionModal");
+    modal.style.display = "block";
+    
 }
 </script>
 
