--- a/views/products.ejs
+++ b/views/products.ejs
@@ -26,7 +26,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p id="description">Some text in the Modal..</p>
   </div>
 
 </div>
@@ -38,12 +38,20 @@
 
   
   function  getId(element) {
+    var span = document.getElementsByClassName("close")[0];
     var info=element.name.split(",")[0];
-    // alert("row" + element.parentNode.parentNode.rowIndex + 
-    // " - column" + element.parentNode.cellIndex + info );
     var modal = document.getElementById("descriptionModal");
+    document.getElementById("description").innerHTML=info;
     modal.style.display = "block";
     
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    window.onclick = function(event) {
+      if (event.target == modal) {
+      modal.style.display = "none";
+      }
+    }
 }
 </script>
 
