--- a/static/style.css
+++ b/static/style.css
@@ -6,10 +6,9 @@
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
+  width: 10%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
@@ -35,6 +34,7 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  text-align: right;
 }
 
 
