--- a/static/style.css
+++ b/static/style.css
@@ -6,8 +6,6 @@
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
-  width: 10%; /* Full width */
-  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -18,14 +16,14 @@
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width :50%; !important
 }
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
   float: right;
   font-size: 28px;
+  text-align: right;
   font-weight: bold;
 }
 
@@ -34,7 +32,6 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
-  text-align: right;
 }
 
 
