🎻✌️ Checkpoint ./static/style.css:10221761/2336 ./views/products.ejs:10221761/609

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -24,9 +24,11 @@
     
 <div id="descriptionModal" class="modal">
   <!-- Modal content -->
+  <span class="close">&times;</span>
   <div class="modal-content">
-    <span class="close">&times;</span>
-    <p id="description">Some text in the Modal..</p>
+    <h2 id="name">Product Name</h2>
+    <p id="description">Product description</p>
+    <button></button>
   </div>
 
 </div>
