--- a/static/style.css
+++ b/static/style.css
@@ -4,27 +4,28 @@
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
+/* Modal Content - need quite a bit of overrides to combat bootstraps natural setting */
 .modal-content {
   background-color: #fefefe;
   margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width :50%; !important
+  padding: 30px;
+  width: 60%!important;
+  text-align: center;
 }
 
 /* The Close Button */
 .close {
+  color: #aaaaaa;
   float: right;
   font-size: 28px;
-  text-align: right;
   font-weight: bold;
+  text-align: right;
 }
 
 .close:hover,
@@ -32,6 +33,7 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  text-align: right;
 }
 
 
